services/UserService/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: user-service
